--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev src/index.ts",
-    "test": "jest --color --watch --verbose --no-cache."
+    "test": "jest --ci --color --watch --verbose --no-cache."
   },
   "jest": {
     "preset": "ts-jest",
