--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -15,6 +15,6 @@ jobs:
     - name: npm install, and test
       run: |
         npm install
-        npm test
+        npm test a
       env:
         CI: true
