--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -15,6 +15,7 @@ jobs:
     - name: npm install, and test
       run: |
         npm install
+        npm install jest
         npm test a
       env:
         CI: true
