--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev src/index.ts",
-    "test": "jest --ci --color --watch --verbose --no-cache."
+    "test": "jest --ci --color --watch --verbose --no-cache.",
+    "test:ci": "jest --colors"
   },
   "jest": {
     "preset": "ts-jest",
