--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -16,6 +16,6 @@ jobs:
       run: |
         npm install
         npm install jest
-        npm test:ci 
+        npm run test:ci 
       env:
         CI: true
