--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -5,17 +5,6 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
-    - name: Use Node.js 12.x
-      uses: actions/setup-node@v1
-      with:
-        node-version: "12.x"
-    - name: npm install, and test
-      run: |
-        npm install
-        npm install jest
-        npm run test:ci 
-      env:
-        CI: true
+      run: npm install && npm run test:ci
