--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - run: npm install && npm run test:ci
+    - run: npm install && npm run test:ci a
